<resources>
    <string name="app_name">HotelManager</string>
    <string name="design_by_from_group">Design by from group</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="input_your_username">Input your username</string>
    <string name="pass">Password</string>
    <string name="store_code">Hotel Code</string>
    <string name="input_your_password">Input your password</string>
    <string name="input_store_code">Input store code</string>
    <string name="diagram">Diagram</string>
    <string name="welcome_to_me">Welcome to me</string>
    <string name="you_can_manage_this_hotel_there">You can manage this hotel there</string>
    <string name="register">Register</string>
    <string name="these_field_not_empty">These fields must not empty</string>
    <string name="info_is_fail">Infomation is not true!</string>
    <string name="account_is_exist">Account is exist</string>
    <string name="room_diagram">Room Diagram</string>
    <string name="price">Price</string>
    <string name="_10h_12h">10h-12h</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="name">Name</string>
    <string name="floors">Floors</string>
    <string name="number">number</string>
    <string name="address">Address</string>
    <string name="rooms">Rooms</string>
    <string name="add_room">Add Room</string>
    <string name="add_floor">Add Floor</string>
    <string name="input_name">Input name</string>
    <string name="number_peoples">Number peoples</string>
    <string name="type">Type</string>
    <string name="is_empty">Is empty</string>
    <string name="hours">Hours</string>
    <string name="from_time">From Time</string>
    <string name="settings">Settings</string>
    <string name="hotel_not_exist">Hotel is not exist</string>
    <string name="pass_must_good_len">Password must be greater than 6 and less than 15</string>
    <string name="username_and_pass_validate_fail">Username and password must not contain space</string>
    <string name="share_prf_key_has_data">has-data</string>
    <string name="update">Update</string>
    <string name="state">State</string>
    <string name="empty">Empty</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="bills">Bills</string>
    <string name="room">Room:</string>
    <string name="null_">null</string>
    <string name="floor">Floor:</string>
    <string name="hotel">Hotel:</string>
    <string name="time">Time:</string>
    <string name="total">Total:</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="all_bills">All bills</string>
    <string name="book">Book</string>
    <string name="ok">OK</string>
    <string name="this_room_has_client">This room has clients</string>
    <string name="booking">Booking</string>
    <string name="find_by_client_name">Find by client name</string>
    <string name="booking_information">Booking Information</string>
    <string name="add_client_name">Add client name</string>
    <string name="change_hotel_name">Change hotel name</string>
    <string name="input_price">Input price</string>
    <string name="add_time_check_in">Add time check in</string>
    <string name="change_floor_name">Change floor name</string>
</resources>