<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/_8sdp">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/_32sdp"
                android:textColor="#015DFB"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:textAllCaps="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    />
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_your_username"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:background="@drawable/input_bg"
                    android:maxLines="1"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pass"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    />
                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_your_password"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:background="@drawable/input_bg"
                    android:maxLines="1"
                    android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/store_code"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"

                    />
                <Spinner
                    android:id="@+id/storeCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:background="@drawable/input_bg"
                    tools:listitem="@layout/item_hotel_picker"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:id="@+id/btnLogin"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10sdp"
                />

        </LinearLayout>
    </FrameLayout>

</layout>