<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/top_shape"
                android:text="@string/booking_information"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white"
                android:paddingVertical="@dimen/_4sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_bg"
                    android:backgroundTint="#E1E1E1"
                    android:hint="@string/add_client_name"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginVertical="@dimen/_24sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:singleLine="true"
                    android:id="@+id/clientName"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_bg"
                    android:backgroundTint="#E1E1E1"
                    android:hint="@string/add_time_check_in"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:singleLine="true"
                    android:focusable="false"
                    android:id="@+id/timeCheckIn"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/_12sdp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/cancel"
                        android:text="@string/cancel"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_10sdp"
                        android:background="@drawable/btn_bg"
                        android:backgroundTint="@color/gray"
                        android:textColor="@color/white"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/oke"
                        android:text="@string/ok"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_10sdp"
                        android:background="@drawable/btn_bg"
                        android:backgroundTint="@color/app_color"
                        android:textColor="@color/white"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>