<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/_4sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/_4sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/bill"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/clientName"
                android:fontFamily="@font/bill"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:text="@string/app_name"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/_8sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/_4sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:fontFamily="@font/bill"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/roomName"
                android:fontFamily="@font/bill"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:text="@string/app_name"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/_8sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/_4sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor"
                android:fontFamily="@font/bill"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/floorName"
                android:fontFamily="@font/bill"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:text="@string/app_name"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/_8sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/_4sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel"
                android:fontFamily="@font/bill"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hotelName"
                android:fontFamily="@font/bill"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:text="@string/app_name"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/_8sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingVertical="@dimen/_4sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_time"
                android:fontFamily="@font/bill"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fromTime"
                android:fontFamily="@font/bill"
                android:textStyle="italic"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:text="@string/app_name"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/_8sdp"/>
        </LinearLayout>
    </LinearLayout>
</layout>