<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/gray"
            android:layout_margin="@dimen/_4sdp"
            android:id="@+id/item_room"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/roomName"
                android:textSize="@dimen/_10sdp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_semi_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:text="@string/price"
                android:textColor="@color/yellow"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:text="@string/_10h_12h"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/vipflag_1"
            app:layout_constraintEnd_toEndOf="@id/item_room"
            app:layout_constraintTop_toTopOf="@id/item_room"
            android:id="@+id/vip_flag"
            android:visibility="gone"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>