<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_shape"
                android:text="@string/update"
                android:gravity="center"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:paddingVertical="@dimen/_4sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_10sdp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_bg"
                        android:layout_marginHorizontal="@dimen/_4sdp"
                        android:textSize="@dimen/_10sdp"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:hint="@string/name"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:id="@+id/editName"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_peoples"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_10sdp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_bg"
                        android:layout_marginHorizontal="@dimen/_4sdp"
                        android:textSize="@dimen/_10sdp"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:hint="@string/number_peoples"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:id="@+id/editPeople"
                        android:inputType="number"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hours"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_10sdp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_bg"
                        android:layout_marginHorizontal="@dimen/_4sdp"
                        android:textSize="@dimen/_10sdp"
                        android:paddingHorizontal="@dimen/_8sdp"
                        android:hint="@string/hours"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:id="@+id/editHours"
                        android:inputType="number"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_10sdp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <CheckBox
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:id="@+id/checkboxEmpty"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/empty"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="@dimen/_10sdp"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:text="@string/cancel"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:background="@drawable/btn_bg"
                        android:backgroundTint="@color/gray"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:id="@+id/cancel"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:text="@string/apply"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:background="@drawable/btn_bg"
                        android:backgroundTint="@color/app_color"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp"
                        android:id="@+id/apply"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>